Fixed title style on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -355,7 +355,7 @@ input, textarea {
 
   h3::after {
     content: "Call of the Storm";
-    font-family: 'Fleur De Leah', sans-serif;
+    font-family: 'Skranji', sans-serif;
     font-size: 42px;
     text-indent: 0;
     display: block;
